Hidden home link for desktop, now is visible for mobiles only. Still need to fix the link ref,refs #25

--- a/diazotheme/bootstrap/static/css/theme.css
+++ b/diazotheme/bootstrap/static/css/theme.css
@@ -435,8 +435,15 @@ input, textarea, .uneditable-input {
     max-width: 95%;
 }
 
+.navbar .brand{
+    display: none;
+}
 @media (max-width: 980px) {
     #LSResult{
         display: none !important;
     }
+    .navbar .brand{
+        display: block;
+    }
 }
+
